# 100ASK_V853-PRO_TinaSDK

./: README.md
device/: product
device/config/rootfs_tar/: target-arm-fast-linaro-5.3.tar.bz2
openwrt/: .openwrt_targets
openwrt/dl/: LVM2.2.03.11.tgz  alsa-lib-1.1.8.tar.bz2  alsa-plugins-1.1.4.tar.bz2  amd64-microcode_3.20191218.1.tar.xz  bluez-5.54.tar.xz  ell-0.16.tar.xz  ethtool-5.2.tar.xz  gst-omx-1.16.3.tar.xz  gst-plugins-aw-1.8.2.tar.xz  gst-plugins-base-1.16.3.tar.xz  gst-plugins-good-1.16.3.tar.xz  gst-plugins-ugly-1.16.3.tar.xz  gstreamer-1.16.3.tar.xz  intel-microcode_3.20200616.1.tar.xz  iozone3_489.tar  iucode-tool_2.3.1.tar.xz  kexec-tools-2.0.16.tar.xz  libatomic_ops-7.6.8.tar.xz  libinput-1.5.0.tar.xz  libsamplerate-1.0.9-f6730d03c3e7660bb6ecad8816f1b09c5825142a.tar.xz  nghttp2-1.41.0.tar.xz  refpolicy-2.20200229.tar.bz2  sbc-1.4.tar.xz  selinux-policy-0.8.tar.xz  strace-5.0.tar.xz  tslib-1.22.tar.bz2  wireguard-linux-compat-1.0.20200611.tar.xz  wireguard-tools-1.0.20191226.tar.xz  xkeyboard-config-2.19.tar.bz2
openwrt/openwrt/: .gitignore  Config.in  Makefile  rules.mk
openwrt/openwrt/config/: Config-build.in  Config-images.in  Config-systeminit.in
openwrt/openwrt/include/: download.mk  image.mk  kernel-build.mk  kernel-defaults.mk  kernel.mk  package-defaults.mk  package.mk  rootfs.mk  scan.mk  target.mk  toplevel.mk  version.mk
openwrt/openwrt/scripts/: target-metadata.pl
openwrt/openwrt/toolchain/: Config.in
openwrt/package/allwinner/audio/alsa-plugins-aw/files/p-eq/: Makefile.am  awequal.conf  eq.h  pcm_awequal.c
(+507 files in other folders)
